<resources>
    <string name="app_name">Jobspot</string>
    <string name="appName">Jobspot</string>
    <string name="find_your">Find Your</string>
    <string name="here">Here!</string>
    <string name="dream_job"><u>Dream Job</u></string>
    <string name="splash_screen_description">Find Your Dream Job or Ideal Candidate Here!</string>
    <string name="forward_arrow">forward arrow</string>
    <string name="login_now">Login Now</string>
    <string name="already_registered">I have registered already </string>
    <string name="select_login_company">Company</string>
    <string name="register_1">Employee Register</string>
    <string name="select_worker">Worker</string>
    <string name="select_company">Company</string>
    <string name="select_register">Select Register</string>
    <string name="create_account">Create an Company Account</string>
    <string name="email_login">lotus@gmail.com</string>
    <string name="companyname">lotus lanka</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="passwordstar">************</string>
    <string name="emailtxt">Email</string>
    <string name="companytxt">Company Name</string>
    <string name="sign_up">Sign up</string>
    <string name="already_account">Already have an account</string>


    <string name="welcomemsg">Welcome Back</string>

    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_btn">LOGIN</string>
    <string name="sign_google">SIGN IN WITH GOOGLE</string>

    <string name="creat_account">You don\'t have an account yet?</string>

    <string name="sign_up_google">SIGN UP WITH GOOGLE</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_addjob">Addjob</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="backtologin">BACK TO LOGIN</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="applynow">APPLY NOW</string>
    <string name="upload_cv">Upload CV</string>
    <string name="hintinfor">hallo</string>
    <string name="uiuxdesigner">UI/UX Designer</string>
    <string name="jobposition">Job position</string>
    <string name="typeof_workplace">Type of workplace</string>
    <string name="onsite">On-site</string>
    <string name="joblocation">Job location</string>
    <string name="employ_type">Employment type</string>
    <string name="location" />
    <string name="location_com">Location</string>
    <string name="phone_num">Phone number</string>
    <string name="edit">EDIT</string>
    <string name="backtohome">BACK TO HOME</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit</string>
    <string name="stats_square">stats_square</string>
    <string name="remoteJob">Remote Job</string>
    <string name="FullTime">Full Time</string>
    <string name="partTime">Part Time</string>
    <string name="Specalization">Top Categories</string>
    <string name="Design_specialization">Design</string>
    <string name="Programmer">Programmer</string>
    <string name="Hello">Hello</string>
    <string name="Finance">Finance</string>
    <string name="education">Education</string>
    <string name="find_job">Find Your Job</string>
    <string name="occupation">Software Engineering</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="back_button">Back Button</string>
    <string name="confirm_logout">Are you sure want to leave ?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="delete_btn">Delete</string>
    <string name="create_usera_account">Create User Account</string>


</resources>