<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CompanyLogin">


        <TextView
            android:id="@+id/textView9"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_marginTop="108dp"
            android:paddingStart="10dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="351dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/passwordstar"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            app:layout_constraintBottom_toTopOf="@+id/checkBox2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.066"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="351dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.736"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_marginTop="56dp"
            android:paddingStart="10dp"
            android:text="@string/emailtxt"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="230dp"
            android:layout_height="49dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="91dp"
            android:text="@string/welcomemsg"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="158dp"
            android:layout_height="52dp"
            android:layout_marginTop="416dp"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.118"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="55dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="55dp"
            android:backgroundTint="@color/mainColor"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="616dp"
            android:layout_marginEnd="10dp"
            android:text="@string/creat_account"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="616dp"
            android:layout_marginEnd="96dp"
            android:text="@string/sign_up"
            android:textColor="#BF360C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>