<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".companyRegister">

        <TextView
            android:id="@+id/textView"
            android:layout_width="299dp"
            android:layout_height="77dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="51dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/companyemail"
            android:layout_width="351dp"
            android:layout_height="49dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/hint_textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/companyname"
            android:layout_width="351dp"
            android:layout_height="49dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/companyname"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/hint_textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="181dp"
            android:layout_height="43dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="191dp"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companypassword"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="227dp"
            android:layout_marginBottom="12dp"
            android:paddingStart="10sp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/companypassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyemail" />

        <EditText
            android:id="@+id/companypassword"
            android:layout_width="351dp"
            android:layout_height="51dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:ems="10"
            android:hint="@string/passwordstar"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/hint_textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="227dp"
            android:layout_marginBottom="13dp"
            android:paddingStart="10sp"
            android:text="@string/emailtxt"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/companyemail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyname" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="227dp"
            android:layout_marginBottom="12dp"
            android:paddingStart="10sp"
            android:text="@string/companytxt"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/companyname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="51dp"
            android:backgroundTint="@color/mainColor"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/already_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintVertical_bias="0.551" />

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="119dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="48dp"
            android:text="@string/already_account"
            android:textColor="@color/material_dynamic_primary70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>